clean and modernize